dxr/src/snapshots/dxr__tests__server_builder_debug_with_off_switch.snap
---
source: dxr/src/tests.rs
assertion_line: 90
expression: "ServerBuilder::new(\"0.0.0.0:3000\".parse().unwrap()).add_off_switch(Box::new(off_switch))"

---
ServerBuilder {
    addr: 0.0.0.0:3000,
    handlers: [],
    off_switch: Some(
        TokioOffSwitch {
            state: RwLock {
                data: false,
                poisoned: false,
                ..
            },
            sleep: 5s,
        },
    ),
}
