dxr/src/snapshots/dxr__tests__server_debug.snap
---
source: dxr/src/tests.rs
assertion_line: 102
expression: server

---
Server {
    addr: 0.0.0.0:3000,
    path: "/",
    handlers: [],
    off_switch: None,
}
