dxr/src/snapshots/dxr__tests__server_debug_with_method.snap
---
source: dxr/src/tests.rs
assertion_line: 118
expression: server

---
Server {
    addr: 0.0.0.0:3000,
    path: "/",
    handlers: [
        "noop",
    ],
    off_switch: None,
}
