dxr/src/snapshots/dxr__tests__server_debug_with_off_switch.snap
---
source: dxr/src/tests.rs
assertion_line: 130
expression: server

---
Server {
    addr: 0.0.0.0:3000,
    path: "/",
    handlers: [],
    off_switch: Some(
        TokioOffSwitch {
            state: RwLock {
                data: false,
                poisoned: false,
                ..
            },
            sleep: 5s,
        },
    ),
}
